@@ -73,6 +73,9 @@ switchAddressSpacesOptimally (iCode *ic, ebbIndex *ebbi)
   thorup_tree_decomposition(tree_decomposition, control_flow_graph);
   nicify(tree_decomposition);
 
+  if(options.dump_graphs)
+    dump_tree_decomposition_naddr(tree_decomposition);
+
   return(tree_dec_address_switch(tree_decomposition, control_flow_graph, addrspaces));
 }
 
