@@ -1,3 +1,9 @@
+2015-04-01 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCnaddr.hpp,
+	  src/SDCCnaddr.cc:
+	  Dump tree decomposition used for address space switching on --dump-graphs.
+
 2015-04-01 Ben Shi <powerstudio1st AT 163 DOT com>
 	* sdas/as6808/Makefile.in:
 	* sdas/as8051/Makefile.in:
